--- a/java/pom.xml
+++ b/java/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.approvaltests</groupId>
+            <artifactId>approvaltests</artifactId>
+            <version>24.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
