--- a/java/.gitignore
+++ b/java/.gitignore
@@ -1,7 +1,4 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.gradle/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
